# 2D-Game

./: CMakeLists.txt  Main.c
source/: SEL.c  SEL.h
source/Area/: Area.c  Area.h  Player.h
source/Area/Player/: Player.c  Player.h
source/Area/map/: MapLoad.c  MapLoad.h  Notes.md  TestMap.txt
source/Area/maps/: MapLoad.c
source/Area/sprites/: sprite.c  sprite.h
